[package]
name = "dagre-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
dagre_rust = "0.0.5"
graphlib_rust = "0.0.3"
serde = {version ="1.0.189", features=["derive"]}
serde_json = "1.0.107"
wasm-bindgen = "0.2.87"
web-sys = {version= "0.3.64", features = ["console"]}


[lib]
crate-type = ["cdylib"]

[patch.crates-io]
dagre_rust = { path = "/Users/marcosalazar/dagre-wasm/dagre_rust-0.0.5" }
graphlib_rust = { path = "/Users/marcosalazar/dagre-wasm/graphlib_rust-0.0.3" }